test/equality.jk
// This is a test file for equality operator for joker language.

var a = 10;
var b = 10;

print a == b; // true

var c = 10.0;
var d = 10.0;

print c == d; // true

// print a == c; // error (different data types)
// print 10 == 10 == 10 == 10; // error
print 10 == 10 and 10 == 10 and 10 == 10; // true
